--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,21 @@
 Changelog
 ------------------------------
+Future features:
+   * Added "/opgear" command.
+   * Added "/v" command.
+   * Added "/bc" command.
+   * Added the home system.
+   * Added short gamemode commands. (/gmc, /gms, etc.)
+   * Added "/cmd", "/barrier" & "/structure" commands.
+0.4-alpha:
+   * Added the warp system.
+   * Output messages in chat are now styled. (Using "/tellraw" command with the api instead of player.sendMessage)
+   * Removed the "player" variable as it's not used anymore due to the new output messages.
 0.3-alpha:
-    * When neat mode shuts down, it first enables sendCmdFeedback and then cmdBlockOutput so you won't get a chat msg informing you about
-      sendCmdFeedback turning on.
     * The "/neat" command is now "/dev"
     * Added the new "/neat" command (AlwaysDay & NeverRain)
-    * Added "/opgear" command.
+    * Added "/keepinv" command.
+    * Fixed warning in the main class by removing the api and its imports.
     * Commands' description actually shows up in the help menu. (I miss-spelled the word description in plugin.yml)
 0.2-alpha:
     * Fixed the "/neat" command so it actually works now.
