--- a/changelog.txt
+++ b/changelog.txt
@@ -3,10 +3,17 @@ Changelog
 Future features:
    * Added "/opgear" command.
    * Added "/bc" command.
-   * Added the home system.
    * Added the warp system.
    * Added "/cmd", "/barrier" & "/structure" commands.
+   * Added "/head" command.
+   * Permissions actually work now.
+   * Added the "/deletehome" and "/resethomes" to the home system.
+   * Changed the home system permissions to battatautil.home.set, battatautil.home.tp, ".delete and ".resetall.
 
+1.0-pre 1:
+  * Permissions for ALL the commands so far are registered at the plugin.yml file. (Not working yet, only registered)
+  * Added permissions (actually working) to the "/dev" & "/gma" commands.
+  * Added the home system + working permissions. (/sethome & /home)
 0.4-alpha:
    * Added "/battatautil" command.
    * Added "/v" command.
